--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -48,11 +48,13 @@
           <a href="{{ site.baseurl }}/sponsor.html" class="button button--no-tablet-small">
             Sponsors
           </a>
-          {% if site.data.conference.scholarship_available %}
-          <a href="{{ site.baseurl }}/scholarships.html" class="button button--no-tablet-small">
-            Scholarships
-          </a>
-          {% endif %}
+          {% unless site.data.conference.schedule_available %}
+            {% if site.data.conference.scholarship_available %}
+            <a href="{{ site.baseurl }}/scholarships.html" class="button button--no-tablet-small">
+              Scholarships
+            </a>
+            {% endif %}
+          {% endunless %}
           {% endif %}
           <a href="{{ site.baseurl }}/coc.html" class="button button--no-tablet-small">
             CoC
